Update JDK to 25 & pom.xml